# gst-plugin-pattern

./: Cargo.toml
src/: lib.rs
src/testpattern/: imp.rs  mod.rs
